gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice27.C
// PR c++/84446
// { dg-do compile { target c++11 } }

template<int> void foo()
{
  int i,
  i = [] { virtual }();  // { dg-error "redeclaration|expected" }
}
